feat: sidebar navigation

--- a/project/index.html
+++ b/project/index.html
@@ -43,6 +43,8 @@
   <footer class="bg-dark text-white text-center py-3">
     <p>&copy; c0np4nn4</p>
   </footer>
+  <script src="utils/script.js">
+  </script>
 </body>
 </html>
 
