--- a/project/index.html
+++ b/project/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ethereum Analysis Dashboard</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
   <header class="bg-primary text-white text-center py-3">
     <h1>Ethereum Analysis Dashboard</h1>
@@ -46,5 +49,5 @@
   <script src="utils/script.js">
   </script>
 </body>
-</html>
 
+</html>
