--- a/project/index.html
+++ b/project/index.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ethereum Analysis Dashboard</title>
+  <title>My Ethereum Dashboard</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
   <header class="bg-primary text-white text-center py-3">
-    <h1>Ethereum Analysis Dashboard</h1>
+    <h1>My Ethereum Dashboard</h1>
   </header>
 
   <div class="container-fluid">
