--- a/project/index.html
+++ b/project/index.html
@@ -7,11 +7,16 @@
   <title>My Ethereum Dashboard</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
+  <style>
+    #dashboard-title {
+      cursor: pointer;
+    }
+  </style>
 </head>
 
 <body>
   <header class="bg-primary text-white text-center py-3">
-    <h1>My Ethereum Dashboard</h1>
+    <h1 id="dashboard-title">My Ethereum Dashboard</h1>
   </header>
 
   <div class="container-fluid">
@@ -27,21 +32,105 @@
 
       <!-- Main Content -->
       <main class="col-md-10 p-4" id="content-area">
+        <h2 style="text-align:center;">Welcome to My Ethereum Dashboard!</h2>
+        <br />
+        <div id="price-chart" style="height: 200px; text-align:center"></div>
+        <br />
+        <br />
+        <div style="text-align:center;">Gas Fee</div>
+
       </main>
     </div>
   </div>
 
   <footer class="bg-dark text-white text-center py-3">
-    <p>&copy; c0np4nn4</p>
+    <p>&copy; 201824590 조승현</p>
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://d3js.org/d3.v7.min.js"></script>
-
   <script src="utils/constants.js"></script>
   <script src="utils/ethereumStatus.js"></script>
   <script src="utils/accountStatus.js"></script>
   <script src="utils/accountTracker.js"></script>
+  <script>
+    $(document).ready(function () {
+      // Navigate to landing page on title click
+      $('#dashboard-title').on('click', function () {
+        $('#content-area').html(`
+          <h2 style="text-align:center;">Welcome to My Ethereum Dashboard!</h2>
+          <br />
+          <div id="price-chart" style="height: 200px; text-align:center"></div>
+          <br />
+          <br />
+          <div style="text-align:center;">Gas Fee</div>
+        `);
+        loadPriceChart();
+      });
+
+      // Load Ethereum price chart
+      async function loadPriceChart() {
+        const url = "https://api.coingecko.com/api/v3/coins/ethereum/market_chart";
+        const params = {
+          vs_currency: "usd",
+          days: "30",
+        };
+        try {
+          const response = await fetch(`${url}?vs_currency=${params.vs_currency}&days=${params.days}`);
+          const data = await response.json();
+          const prices = data.prices.map(price => ({date: new Date(price[0]), value: price[1]}));
+
+          drawPriceChart(prices);
+        } catch (error) {
+          console.error("Error fetching price data:", error);
+        }
+      }
+
+      // Draw chart using D3.js
+      function drawPriceChart(data) {
+        const width = 600;
+        const height = 200;
+        const margin = {top: 20, right: 30, bottom: 40, left: 50};
+
+        const svg = d3.select("#price-chart")
+          .append("svg")
+          .attr("width", width + margin.left + margin.right)
+          .attr("height", height + margin.top + margin.bottom)
+          .append("g")
+          .attr("transform", `translate(${margin.left},${margin.top})`);
+
+        const x = d3.scaleTime()
+          .domain(d3.extent(data, d => d.date))
+          .range([0, width]);
+
+        const y = d3.scaleLinear()
+          .domain([0, d3.max(data, d => d.value)])
+          .nice()
+          .range([height, 0]);
+
+        const line = d3.line()
+          .x(d => x(d.date))
+          .y(d => y(d.value));
+
+        svg.append("g")
+          .attr("transform", `translate(0,${height})`)
+          .call(d3.axisBottom(x).ticks(7));
+
+        svg.append("g")
+          .call(d3.axisLeft(y));
+
+        svg.append("path")
+          .datum(data)
+          .attr("fill", "none")
+          .attr("stroke", "steelblue")
+          .attr("stroke-width", 1.5)
+          .attr("d", line);
+      }
+
+      // Trigger graph loading on page load
+      loadPriceChart();
+    });
+  </script>
 </body>
 
 </html>
