--- a/project/index.html
+++ b/project/index.html
@@ -7,11 +7,6 @@
   <title>My Ethereum Dashboard</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
-  <style>
-    #dashboard-title {
-      cursor: pointer;
-    }
-  </style>
 </head>
 
 <body>
@@ -34,11 +29,15 @@
       <main class="col-md-10 p-4" id="content-area">
         <h2 style="text-align:center;">Welcome to My Ethereum Dashboard!</h2>
         <br />
-        <div id="price-chart" style="height: 200px; text-align:center"></div>
+        <div id="price-chart" class="card" style="min-height: 200px;">
+          <h3>
+            <img src="eth_logo.png" style="width:32px;height:32px;" alt="Ethereum Logo"
+              style="width: 20px; height: 20px; margin-right: 5px; vertical-align: middle;">
+            ETH Price
+          </h3>
+        </div>
         <br />
-        <br />
-        <div style="text-align:center;">Gas Fee</div>
-
+        <div id="gas-fee" class="card" style="font-weight:bold;">⛽️ Current Gas Fee: Loading...</div>
       </main>
     </div>
   </div>
@@ -49,10 +48,7 @@
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://d3js.org/d3.v7.min.js"></script>
-  <script src="utils/constants.js"></script>
-  <script src="utils/ethereumStatus.js"></script>
-  <script src="utils/accountStatus.js"></script>
-  <script src="utils/accountTracker.js"></script>
+
   <script>
     $(document).ready(function () {
       // Navigate to landing page on title click
@@ -60,12 +56,14 @@
         $('#content-area').html(`
           <h2 style="text-align:center;">Welcome to My Ethereum Dashboard!</h2>
           <br />
-          <div id="price-chart" style="height: 200px; text-align:center"></div>
+          <div id="price-chart" class="card" style="min-height: 200px;">
+            <h3> ETH Price </h3>
+          </div>
           <br />
-          <br />
-          <div style="text-align:center;">Gas Fee</div>
+          <div id="gas-fee" class="card" style="font-weight:bold;">⛽️ Current Gas Fee: Loading...</div>
         `);
         loadPriceChart();
+        updateGasFee();
       });
 
       // Load Ethereum price chart
@@ -73,7 +71,7 @@
         const url = "https://api.coingecko.com/api/v3/coins/ethereum/market_chart";
         const params = {
           vs_currency: "usd",
-          days: "30",
+          days: "365",
         };
         try {
           const response = await fetch(`${url}?vs_currency=${params.vs_currency}&days=${params.days}`);
@@ -86,51 +84,113 @@
         }
       }
 
-      // Draw chart using D3.js
+      // Draw Ethereum price chart with tooltips
       function drawPriceChart(data) {
         const width = 600;
         const height = 200;
         const margin = {top: 20, right: 30, bottom: 40, left: 50};
 
-        const svg = d3.select("#price-chart")
+        const svg = d3
+          .select("#price-chart")
           .append("svg")
           .attr("width", width + margin.left + margin.right)
           .attr("height", height + margin.top + margin.bottom)
           .append("g")
           .attr("transform", `translate(${margin.left},${margin.top})`);
 
-        const x = d3.scaleTime()
-          .domain(d3.extent(data, d => d.date))
+        const x = d3
+          .scaleTime()
+          .domain(d3.extent(data, (d) => d.date))
           .range([0, width]);
 
-        const y = d3.scaleLinear()
-          .domain([0, d3.max(data, d => d.value)])
+        const y = d3
+          .scaleLinear()
+          .domain([0, d3.max(data, (d) => d.value)])
           .nice()
           .range([height, 0]);
 
-        const line = d3.line()
-          .x(d => x(d.date))
-          .y(d => y(d.value));
+        const line = d3
+          .line()
+          .x((d) => x(d.date))
+          .y((d) => y(d.value));
 
-        svg.append("g")
+        // Axes
+        svg
+          .append("g")
           .attr("transform", `translate(0,${height})`)
           .call(d3.axisBottom(x).ticks(7));
 
-        svg.append("g")
-          .call(d3.axisLeft(y));
+        svg.append("g").call(d3.axisLeft(y));
 
-        svg.append("path")
+        // Append the line path
+        const path = svg
+          .append("path")
           .datum(data)
           .attr("fill", "none")
           .attr("stroke", "steelblue")
-          .attr("stroke-width", 1.5)
+          .attr("stroke-width", 3.5)
           .attr("d", line);
+
+        // Animate the line
+        const totalLength = path.node().getTotalLength();
+
+        path
+          .attr("stroke-dasharray", `${totalLength} ${totalLength}`)
+          .attr("stroke-dashoffset", totalLength)
+          .transition()
+          .duration(2000)
+          .ease(d3.easeLinear)
+          .attr("stroke-dashoffset", 0);
+
+        // Tooltip setup
+        const tooltip = d3.select("body").append("div")
+          .attr("class", "tooltip")
+          .style("opacity", 0);
+
+        // Add circles with tooltips at 7-day intervals
+        svg.selectAll("circle")
+          .data(data.filter((_, i) => i % 7 === 0)) // Filter data for 7-day intervals
+          .enter()
+          .append("circle")
+          .attr("cx", d => x(d.date))
+          .attr("cy", d => y(d.value))
+          .attr("r", 4)
+          .attr("fill", "red")
+          .on("mouseover", function (event, d) {
+            tooltip.transition().duration(200).style("opacity", .9);
+            tooltip.html(`Price: $${d.value.toFixed(2)}<br>Date: ${d.date.toDateString()}`)
+              .style("left", (event.pageX + 5) + "px")
+              .style("top", (event.pageY - 28) + "px");
+          })
+          .on("mouseout", function () {
+            tooltip.transition().duration(500).style("opacity", 0);
+          });
       }
 
-      // Trigger graph loading on page load
+      // Fetch current Gas Fee and update DOM
+      async function updateGasFee() {
+        const url = "https://api.coingecko.com/api/v3/simple/price?ids=ethereum&vs_currencies=usd&include_last_updated_at=true";
+        try {
+          const response = await fetch(url);
+          const data = await response.json();
+          const averageGasFee = data.ethereum.usd.toFixed(2); // Updated gas fee endpoint
+          $("#gas-fee").text(`⛽️ Current Gas Fee: ${averageGasFee} Gwei`);
+        } catch (error) {
+          console.error("Error fetching gas fee:", error);
+          $("#gas-fee").text("Error loading gas fee.");
+        }
+      }
+
+      // Trigger graph and gas fee loading on page load
       loadPriceChart();
+      updateGasFee();
     });
   </script>
+  <script src="utils/constants.js"></script>
+  <script src="utils/ethereumStatus.js"></script>
+  <script src="utils/accountStatus.js"></script>
+  <script src="utils/accountTracker.js"></script>
+
 </body>
 
 </html>
