--- a/project/index.html
+++ b/project/index.html
@@ -4,193 +4,189 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Ethereum Dashboard</title>
+  <title>Air Quality Monitoring Dashboard</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
+  <!-- Header -->
   <header class="bg-primary text-white text-center py-3">
-    <h1 id="dashboard-title">My Ethereum Dashboard</h1>
+    <h1>Air Quality Monitoring Dashboard</h1>
+    <p>Real-time monitoring and visualization of air quality data</p>
   </header>
 
-  <div class="container-fluid">
-    <div class="row">
-      <!-- Sidebar -->
-      <nav class="col-md-2 bg-light sidebar">
-        <ul class="nav flex-column py-4">
-          <li class="nav-item"><a href="#" class="nav-link" data-target="ethereum-status">Ethereum Status</a></li>
-          <li class="nav-item"><a href="#" class="nav-link" data-target="account-status">Account Status</a></li>
-          <li class="nav-item"><a href="#" class="nav-link" data-target="account-tracker">Account Tracker</a></li>
+  <!-- Navigation Bar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#" id="nav-home">AQMonitor</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" href="#" id="nav-city-data">City Data</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" id="nav-visualize">Visualize</a>
+          </li>
         </ul>
-      </nav>
-
-      <!-- Main Content -->
-      <main class="col-md-10 p-4" id="content-area">
-        <h2 style="text-align:center;">Welcome to My Ethereum Dashboard!</h2>
-        <br />
-        <div id="price-chart" class="card" style="min-height: 200px;">
-          <h3>
-            <img src="eth_logo.png" style="width:32px;height:32px;" alt="Ethereum Logo"
-              style="width: 20px; height: 20px; margin-right: 5px; vertical-align: middle;">
-            ETH Price
-          </h3>
-        </div>
-        <br />
-        <div id="gas-fee" class="card" style="font-weight:bold;">⛽️ Current Gas Fee: Loading...</div>
-      </main>
+      </div>
     </div>
-  </div>
+  </nav>
 
+  <!-- Main Dashboard -->
+  <main class="container my-4">
+    <!-- Section: City Data -->
+    <section id="data-section">
+      <div class="d-flex justify-content-between align-items-center">
+        <h2 class="text-center">Real-time Air Quality Data</h2>
+        <button id="refresh-data" class="btn btn-secondary">Refresh Data</button>
+      </div>
+      <div class="input-group my-3">
+        <input type="text" id="city-input" class="form-control" placeholder="Enter city name">
+        <button id="fetch-city-data" class="btn btn-primary">Get Data</button>
+      </div>
+      <div class="text-center mb-4">
+        <p id="current-city">Current city: Seoul</p>
+      </div>
+      <div class="row">
+        <!-- Data Cards -->
+        <div class="col-md-4">
+          <div class="card text-white bg-success mb-3">
+            <div class="card-header">Temperature</div>
+            <div class="card-body">
+              <h5 class="card-title" id="temperature">N/A</h5>
+              <p class="card-text">Current air temperature (°C)</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card text-white bg-info mb-3">
+            <div class="card-header">Humidity</div>
+            <div class="card-body">
+              <h5 class="card-title" id="humidity">N/A</h5>
+              <p class="card-text">Humidity (%)</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card text-white bg-secondary mb-3">
+            <div class="card-header">SO2</div>
+            <div class="card-body">
+              <h5 class="card-title" id="so2">N/A</h5>
+              <p class="card-text">Sulfur Dioxide (μg/m3)</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card text-white bg-warning mb-3">
+            <div class="card-header">PM2.5</div>
+            <div class="card-body">
+              <h5 class="card-title" id="pm25">N/A</h5>
+              <p class="card-text">Fine particulate matter (μg/m3)</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card text-white bg-warning mb-3">
+            <div class="card-header">PM10</div>
+            <div class="card-body">
+              <h5 class="card-title" id="pm10">N/A</h5>
+              <p class="card-text">Particulate matter (μg/m3)</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card text-white bg-secondary mb-3">
+            <div class="card-header">NOx</div>
+            <div class="card-body">
+              <h5 class="card-title" id="nox">N/A</h5>
+              <p class="card-text">Nitrogen Oxides (μg/m3)</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card text-white bg-secondary mb-3">
+            <div class="card-header">NH3</div>
+            <div class="card-body">
+              <h5 class="card-title" id="nh3">N/A</h5>
+              <p class="card-text">Ammonia (μg/m3)</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card text-white bg-secondary mb-3">
+            <div class="card-header">NO2</div>
+            <div class="card-body">
+              <h5 class="card-title" id="no2">N/A</h5>
+              <p class="card-text">Nitrogen dioxide (μg/m3)</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card text-white bg-danger mb-3">
+            <div class="card-header">CO</div>
+            <div class="card-body">
+              <h5 class="card-title" id="co">N/A</h5>
+              <p class="card-text">Carbon Monoxide Levels (μg/m3)</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="visual-representation-section" style="display: none;">
+      <h2 class="text-center">Visual Representation</h2>
+      <div class="input-group my-3">
+        <input type="text" id="temperature-city-input" class="form-control"
+          placeholder="Enter city name for temperature tracking">
+        <button id="fetch-temperature-data" class="btn btn-primary">Get Temperature Data</button>
+      </div>
+      <div class="text-center my-2">
+        <p id="vis-current-city">Current city: Seoul</p>
+      </div>
+      <div class="row">
+        <div class="col-md-6" style="max-height: 300px;">
+          <canvas id="temperature-chart" width="400" height="300"></canvas>
+        </div>
+        <div class="col-md-6" style="max-height: 300px;">
+          <canvas id="humidity-chart" width="400" height="300"></canvas>
+        </div>
+      </div>
+      <div class="row mt-4">
+        <div class="col-md-6" style="max-height: 300px;">
+          <canvas id="pollutant-bar-chart" width="400" height="300"></canvas>
+        </div>
+        <div class="col-md-6" style="max-height: 300px;">
+          <canvas id="weather-doughnut-chart" width="400" height="300"></canvas>
+        </div>
+      </div>
+      <div class="mt-4 text-center">
+        <input type="file" id="csv-upload" class="form-control mb-3" accept=".csv">
+        <button id="upload-csv" class="btn btn-primary">Upload CSV</button>
+      </div>
+    </section>
+
+
+  </main>
+
+  <!-- Footer -->
   <footer class="bg-dark text-white text-center py-3">
-    <p>&copy; 201824590 조승현</p>
+    <p>&copy; 2024 Air Quality Monitoring Dashboard. All Rights Reserved.</p>
   </footer>
 
+  <!-- Scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://d3js.org/d3.v7.min.js"></script>
 
-  <script>
-    $(document).ready(function () {
-      // Navigate to landing page on title click
-      $('#dashboard-title').on('click', function () {
-        $('#content-area').html(`
-          <h2 style="text-align:center;">Welcome to My Ethereum Dashboard!</h2>
-          <br />
-          <div id="price-chart" class="card" style="min-height: 200px;">
-            <h3> ETH Price </h3>
-          </div>
-          <br />
-          <div id="gas-fee" class="card" style="font-weight:bold;">⛽️ Current Gas Fee: Loading...</div>
-        `);
-        loadPriceChart();
-        updateGasFee();
-      });
-
-      // Load Ethereum price chart
-      async function loadPriceChart() {
-        const url = "https://api.coingecko.com/api/v3/coins/ethereum/market_chart";
-        const params = {
-          vs_currency: "usd",
-          days: "365",
-        };
-        try {
-          const response = await fetch(`${url}?vs_currency=${params.vs_currency}&days=${params.days}`);
-          const data = await response.json();
-          const prices = data.prices.map(price => ({date: new Date(price[0]), value: price[1]}));
-
-          drawPriceChart(prices);
-        } catch (error) {
-          console.error("Error fetching price data:", error);
-        }
-      }
-
-      // Draw Ethereum price chart with tooltips
-      function drawPriceChart(data) {
-        const width = 600;
-        const height = 200;
-        const margin = {top: 20, right: 30, bottom: 40, left: 50};
-
-        const svg = d3
-          .select("#price-chart")
-          .append("svg")
-          .attr("width", width + margin.left + margin.right)
-          .attr("height", height + margin.top + margin.bottom)
-          .append("g")
-          .attr("transform", `translate(${margin.left},${margin.top})`);
-
-        const x = d3
-          .scaleTime()
-          .domain(d3.extent(data, (d) => d.date))
-          .range([0, width]);
-
-        const y = d3
-          .scaleLinear()
-          .domain([0, d3.max(data, (d) => d.value)])
-          .nice()
-          .range([height, 0]);
-
-        const line = d3
-          .line()
-          .x((d) => x(d.date))
-          .y((d) => y(d.value));
-
-        // Axes
-        svg
-          .append("g")
-          .attr("transform", `translate(0,${height})`)
-          .call(d3.axisBottom(x).ticks(7));
-
-        svg.append("g").call(d3.axisLeft(y));
-
-        // Append the line path
-        const path = svg
-          .append("path")
-          .datum(data)
-          .attr("fill", "none")
-          .attr("stroke", "steelblue")
-          .attr("stroke-width", 3.5)
-          .attr("d", line);
-
-        // Animate the line
-        const totalLength = path.node().getTotalLength();
-
-        path
-          .attr("stroke-dasharray", `${totalLength} ${totalLength}`)
-          .attr("stroke-dashoffset", totalLength)
-          .transition()
-          .duration(2000)
-          .ease(d3.easeLinear)
-          .attr("stroke-dashoffset", 0);
-
-        // Tooltip setup
-        const tooltip = d3.select("body").append("div")
-          .attr("class", "tooltip")
-          .style("opacity", 0);
-
-        // Add circles with tooltips at 7-day intervals
-        svg.selectAll("circle")
-          .data(data.filter((_, i) => i % 7 === 0)) // Filter data for 7-day intervals
-          .enter()
-          .append("circle")
-          .attr("cx", d => x(d.date))
-          .attr("cy", d => y(d.value))
-          .attr("r", 4)
-          .attr("fill", "red")
-          .on("mouseover", function (event, d) {
-            tooltip.transition().duration(200).style("opacity", .9);
-            tooltip.html(`Price: $${d.value.toFixed(2)}<br>Date: ${d.date.toDateString()}`)
-              .style("left", (event.pageX + 5) + "px")
-              .style("top", (event.pageY - 28) + "px");
-          })
-          .on("mouseout", function () {
-            tooltip.transition().duration(500).style("opacity", 0);
-          });
-      }
-
-      // Fetch current Gas Fee and update DOM
-      async function updateGasFee() {
-        const url = "https://api.coingecko.com/api/v3/simple/price?ids=ethereum&vs_currencies=usd&include_last_updated_at=true";
-        try {
-          const response = await fetch(url);
-          const data = await response.json();
-          const averageGasFee = data.ethereum.usd.toFixed(2); // Updated gas fee endpoint
-          $("#gas-fee").text(`⛽️ Current Gas Fee: ${averageGasFee} Gwei`);
-        } catch (error) {
-          console.error("Error fetching gas fee:", error);
-          $("#gas-fee").text("Error loading gas fee.");
-        }
-      }
-
-      // Trigger graph and gas fee loading on page load
-      loadPriceChart();
-      updateGasFee();
-    });
-  </script>
   <script src="utils/constants.js"></script>
-  <script src="utils/ethereumStatus.js"></script>
-  <script src="utils/accountStatus.js"></script>
-  <script src="utils/accountTracker.js"></script>
-
+  <script src="utils/navigation.js"></script>
+  <script src="utils/dataSimulation.js"></script>
+  <script src="utils/chartSimulation.js"></script>
 </body>
 
 </html>
