--- a/project/index.html
+++ b/project/index.html
@@ -39,7 +39,6 @@
 
   <!-- Main Dashboard -->
   <main class="container my-4">
-    <!-- Section: City Data -->
     <section id="data-section">
       <div class="d-flex justify-content-between align-items-center">
         <h2 class="text-center">Real-time Air Quality Data</h2>
@@ -50,7 +49,10 @@
         <button id="fetch-city-data" class="btn btn-primary">Get Data</button>
       </div>
       <div class="text-center mb-4">
-        <p id="current-city">Current city: Seoul</p>
+        <p id="current-city" class="d-inline">Current city: Seoul</p>
+      </div>
+      <div class="text-center" id="air-quality-status" class="d-inline" style="margin-left: 15px;">Air Quality:
+        Good 😊
       </div>
       <div class="row">
         <!-- Data Cards -->
@@ -148,7 +150,7 @@
       <div class="text-center my-2">
         <p id="vis-current-city">Current city: Seoul</p>
       </div>
-      <div class="row">
+      <div class="row" style=" text-align:center;">
         <div class="col-md-6" style="max-height: 300px;">
           <canvas id="temperature-chart" width="400" height="300"></canvas>
         </div>
@@ -164,6 +166,7 @@
           <canvas id="weather-doughnut-chart" width="400" height="300"></canvas>
         </div>
       </div>
+      <br />
       <div class="mt-4 text-center">
         <input type="file" id="csv-upload" class="form-control mb-3" accept=".csv">
         <button id="upload-csv" class="btn btn-primary">Upload CSV</button>
@@ -182,6 +185,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/4.1.2/papaparse.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+
 
   <script src="utils/constants.js"></script>
   <script src="utils/navigation.js"></script>
