--- a/project/index.html
+++ b/project/index.html
@@ -178,7 +178,7 @@
 
   <!-- Footer -->
   <footer class="bg-dark text-white text-center py-3">
-    <p>&copy; 2024 Air Quality Monitoring Dashboard. All Rights Reserved.</p>
+    <p>&copy; 201824590 조승현</p>
   </footer>
 
   <!-- Scripts -->
